# M467_USB_SVF_CPLD

app/: .geminiignore  .gitignore  clean_vs.bat
app/FILESUM/: FILESUM.sln
app/FILESUM/FILESUM/: FILESUM.cpp  FILESUM.vcxproj  FILESUM.vcxproj.filters  ReadMe.txt  stdafx.cpp
app/M460/: CMakeLists.txt  M460.c  README.md  config.h  cpld_svf.c  mcu_isp.c  usb_cmd.c
fw/: .gitignore  README.md  build_keil_projects.bat  fw_clean_all.bat  fw_keep_bin.bat  killkeil.bat  rename_firmware.py
fw/SampleCode/ISP/ISP_HID_20/: descriptors.c  fmc_user.c  hid_transfer.c  hsusbd_user.c  isp_user.c  main.c  targetdev.c
fw/SampleCode/ISP/ISP_HID_20/Keil/: ISP_HID_20.uvguix.JCLiu  ISP_HID_20.uvoptx  ISP_HID_20.uvprojx  Nu_Link_Driver.ini  cppcheck-addon-ctu-file-list
fw/SampleCode/StdDriver/HSUSBD_svf/: cpld_fan.c  descriptors.c  g_def.h  hid_transfer.c  hid_transfer.h  libxsvf.h  log_dump.c  main.c  memname.c  nvme_mi - Copy.c  nvme_mi.c  play.c  scan.c  statename.c  svf.c  tap.c  usb_sn.c  xsvf.c  xsvftool-esp.c  xsvftool-gpio.c  xsvftool-m031.c
fw/SampleCode/StdDriver/HSUSBD_svf/Keil/: HSUSBD_HID_Transfer.uvguix.JCLiu  HSUSBD_HID_Transfer.uvguix.tester  HSUSBD_HID_Transfer.uvoptx  HSUSBD_HID_Transfer.uvprojx  Nu_Link_Driver.ini
